Sphinxのインストールを記載と追加

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
 aiosignal==1.4.0
+alabaster==1.0.0
 attrs==25.4.0
+babel==2.18.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
+docutils==0.22.4
 frozenlist==1.8.0
 idna==3.11
+imagesize==1.4.1
+Jinja2==3.1.6
+MarkupSafe==3.0.3
 multidict==6.7.1
+packaging==26.0
 propcache==0.4.1
+Pygments==2.19.2
 requests==2.32.5
+roman-numerals==4.1.0
+snowballstemmer==3.0.1
+Sphinx==9.1.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 urllib3==2.6.3
 yarl==1.22.0
