chap10の学習開始

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,14 @@
       "extensions": ["djhtml", "jinja"],
       "format": "svg"
     }
-  ]
+  ],
+
+  "[markdown]": {
+    "editor.inlineSuggest.enabled": false,
+    "editor.quickSuggestions": {
+      "other": false,
+      "comments": false,
+      "strings": false
+    }
+  }
 }
